objects/Partner_Contract__c.object
<CustomObject>
    <description>Case 01074860</description>
    <fields>
        <fullName>ACA_Control_Account_Language__c</fullName>
        <description>Account Control Agreement Section</description>
        <label>Control Account Language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACA_Control_Account_in_Place__c</fullName>
        <description>Account Control Agreement Section</description>
        <label>Control Account in Place</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic Partnership Agreement</fullName>
                </value>
                <value>
                    <fullName>Wholesaler Agreement</fullName>
                </value>
                <value>
                    <fullName>ODN Reseller Agreement</fullName>
                </value>
                <value>
                    <fullName>Federal Reseller Agreement</fullName>
                </value>
                <value>
                    <fullName>Security Agreement</fullName>
                </value>
                <value>
                    <fullName>Account Control Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Banking_Account_Language__c</fullName>
        <label>Banking Account Language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Banking_Fee_Language__c</fullName>
        <label>Banking Fee Language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed/Cancelled</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diversity_Partner_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Diversity Partner / Reseller Name</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Partner Contracts</relationshipLabel>
        <relationshipName>Partner_Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merchant_Account_Language__c</fullName>
        <label>Merchant Account Language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OD_Signatory_Date__c</fullName>
        <label>OD Signatory Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OD_Signatory__c</fullName>
        <label>OD Signatory</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_contract_if_amendment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Original contract if this is an amendment</description>
        <inlineHelpText>Original contract if this is an amendment</inlineHelpText>
        <label>Original contract if amendment</label>
        <referenceTo>Partner_Contract__c</referenceTo>
        <relationshipLabel>Partner Contracts</relationshipLabel>
        <relationshipName>Partner_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Signatory_Date__c</fullName>
        <label>Partner Signatory Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Signatory__c</fullName>
        <label>Partner Signatory</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_s_Bank__c</fullName>
        <label>Partner&apos;s Bank</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fifth Third</fullName>
                </value>
                <value>
                    <fullName>Comerica</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SPA_Control_Account_Language__c</fullName>
        <description>Strategic Partnership Agreement Section</description>
        <label>Control Account Language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SPA_Control_Account_in_Place__c</fullName>
        <description>Strategic Partnership Agreement Section</description>
        <label>Control Account in Place</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Language__c</fullName>
        <label>Security Language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <label>Security</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pledged Collateral</fullName>
                </value>
                <value>
                    <fullName>Personal Guarantee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Succession_Plan_in_Place__c</fullName>
        <label>Succession Plan in Place</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Partner Contracts</relationshipLabel>
        <relationshipName>Partner_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Termination_Language__c</fullName>
        <label>Termination Language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tier_1_Partner_AB_Compensation_Fee_Paid__c</fullName>
        <label>Tier 1 Partner AB Compensation Fee Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tier_1_Partner_CC_Compensation_Fee_Paid__c</fullName>
        <label>Tier 1 Partner CC Compensation Fee Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tier_1_Partner_Compensation_Language__c</fullName>
        <label>Tier 1 Partner Compensation Language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Partner Contract</label>
    <nameField>
        <displayFormat>PC-{YYYY}{MM}{000}</displayFormat>
        <label>Partner Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>